// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot with empty string 1`] = `
<Styled(Breadcrumb)>
  <Route
    component={[Function]}
    key="0"
    path="/"
  />
</Styled(Breadcrumb)>
`;

exports[`rendering snapshots should render valid snapshot with more than one segment path 1`] = `
<Styled(Breadcrumb)>
  <Route
    component={[Function]}
    key="0"
    path="/"
  />
  <Route
    component={[Function]}
    key="1"
    path="/test"
  />
  <Route
    component={[Function]}
    key="2"
    path="/test/test2"
  />
</Styled(Breadcrumb)>
`;

exports[`rendering snapshots should render valid snapshot with one segment path 1`] = `
<Styled(Breadcrumb)>
  <Route
    component={[Function]}
    key="0"
    path="/"
  />
  <Route
    component={[Function]}
    key="1"
    path="/test"
  />
</Styled(Breadcrumb)>
`;

exports[`rendering snapshots should render valid snapshot with root path 1`] = `
<Styled(Breadcrumb)>
  <Route
    component={[Function]}
    key="0"
    path="/"
  />
</Styled(Breadcrumb)>
`;
